# PL0-Compiler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  example.plo  lexer.c
src/: CMakeLists.txt  code_gen.cpp  code_gen.hpp  context.cpp  context.hpp  current_token.hpp  emitter.hpp  lexer.c  lexer.cpp  lexer.h  lexer.hpp  lexer.lex  logger.cpp  logger.hpp  main.c  main.cpp  oplist.cpp  oplist.hpp  optimization.cpp  optimization.hpp  optree.cpp  optree.hpp  parser.c  parser.cpp  parser.h  parser.hpp  redefine_yylex.h  redefine_yylex.hpp  runtime.cpp  runtime.hpp  stack.cpp  stack.hpp  stmt_list.cpp  stmt_list.hpp  token.h  token.hpp  token_type.c  token_type.cpp  token_type.h  token_type.hpp  (+3 more)
src/aassembler/: CMakeLists.txt  README.md  aarest-console.cpp  aassembler.cpp  aassembler.hpp  aassembler.l  opcodes.hpp  stack.cpp  stack.hpp
